--- a/index.html
+++ b/index.html
@@ -5,57 +5,72 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Weather Dashboard</title>
+    <title>Rob's Weather Dashboard</title>
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/style.css">
-    <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
-
+    <link rel="shortcut icon" href="./assets/images/favicon.png" type="image/x-icon">
 </head>
 
 <body>
-    <h3 class="title" id="title">Weather Dashboard</h3>
-    <main class="container-fluid col-12">
-        <div class="row">
-            <div class="col col-lg-3 bg-dark text-light h-100 d-inline-block ">
-                <form id="search-form" class="search-form">
-                    <fieldset>
-                        <h1>Search for a city:</h1>
-                        <div class="mb-3">
-                            <input type="text" id="q" name="search" class="form-control" placeholder="">
-                        </div>
 
-                        <button type="submit" class="btn btn-primary" id="btn btn-primary"
-                            style="width: 100%; margin-bottom: 10px;">Search</button>
-                        <h3 class="search-header">Recent Searches</h3>
-                        <div class="mb-3">
-                            <class type="text" id="past-search">
+    <!-- HEADER -->
+    <nav class="navbar bg-primary-subtle mb-4">
+        <div class="container-fluid justify-content-center">
+            <span class="navbar-brand mb-0 h1">Online Weather Dashboard</span>
+        </div>
+    </nav>
 
-                        </div>
-                    </fieldset>
-                </form>
+    <!-- ROW ONE - SEARCH AND MAIN CARD -->
+    <div class="container row justify-content-around mb-4">
+        <form id="city-search" class="col-12 col-lg-3">
+            <div class="mb-3">
+                    <h5>Search for a City:</h5>
+                </label>
+                <input type="text" name="q" id="q" class="form-control">
+                <div class="form-text">Enter a city in the field above</div>
             </div>
+            <button type="submit" class="btn btn-primary w-100">Search</button>
+        </form>
 
-            <div class="card" style="width: 66%;
-            padding-top: 5px;">
-                <div class="row">
-                    <div class="col-12 col-9 justify-content-end">
-                        <div class="search-results" id="current-day">
-                        </div>
-                        <div class="row col col-lg-9 justify-content-end"
-                        class="five-day" id="five-day">
-                        </div>
-                    </div>
-                </div>
+        <div class="row col-12 col-lg-9 card">
+            <div class="card-body">
+                <h2 id="city-name" class="q card-title"></h2>
+                <img id="current-icon-image" class="">
+                <p id="current-temp"></p>
+                <p id="current-wind-speed"></p>
+                <p id="current-humidity"></p>
             </div>
         </div>
+    </div>
 
 
+    <!-- ROW 2 - SEARCH HISTORY AND 5 DAY -->
 
+    <div class="container row justify-content-around mb-4">
+        <div class="col-12 col-lg-3 m-auto">
+            <p id="search-history-header" class="d-none">Search History:</p>
+            <div id="search-history" class="list-group">
+            </div>
         </div>
+        <!-- 5 Day Forecast Cards -->
+        <div class="col-12 col-lg-9">
+            <h2 id ="five-day-header" class="d-none" >5 Day Forecast</h2>
+            <div class="card-group">
+            </div>
         </div>
-    </main>
-    <script src="./assets/script.js"></script>
+    </div>
+
+
+
+
+
+        <script src="https://cdn.jsdelivr.net/npm/dayjs@1/dayjs.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe"
+            crossorigin="anonymous"></script>
+        <script src="./assets/script.js"></script>
 </body>
 
 </html>
